# cityrade

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
.github/workflows/: rust.yml
backend/: Cargo.toml
backend/migration/src/: m20220101_000001_create_table.rs
backend/src/: auth.rs  database.rs  main.rs  routes.rs
backend/src/entity/: account.rs
backend/src/tests/: account.rs  building.rs  map.rs  mod.rs  routes.rs  shop.rs
backend/src/types/: account.rs  building.rs  map.rs  mod.rs  shop.rs
base/: Cargo.toml
base/macros/: Cargo.toml
base/macros/src/: lib.rs
base/src/: account.rs  building.rs  effect.rs  lib.rs  map.rs
cityrade-macros/: Cargo.toml
cityrade-macros/src/: lib.rs
cityrade-types/: Cargo.toml
cityrade-types/docs/: README.md  building.md  city.md  diplomacy.md  faction.md  integration.md  market.md  random_events.md  resources.md  technology.md  world.md
cityrade-types/src/: account.rs  achievements.rs  building.rs  city.rs  commands.rs  diplomacy.rs  events.rs  faction.rs  lib.rs  market.rs  player.rs  plugin.rs  population.rs  quest.rs  random_events.rs  resources.rs  technology.rs  world.rs
cityrade-types/src/tests/: diplomacy_tests.rs  faction_tests.rs  mod.rs
src/: lib.rs
