[package]
name = "cityrade-server"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
actix-web = { version = "4.9.0", features = ["macros"] }
bcrypt = "0.16.0"
sea-orm = { version = "1.1.2", features = ["mock"] }
migration = { path = "migration" }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.11.0", features = ["v7"] }
dotenvy = "0.15.7"
chrono = "0.4.39"
tracing-subscriber = "0.3.19"
rand = "0.8.5"
noise = "0.9.0"
jsonwebtoken = "9.3.0"
