[package]
name = "cityrade-server"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
cityrade = { path = "../base" }
actix-web = { version = "4.9.0", features = ["macros"] }
dotenvy = "0.15.7"
tracing-subscriber = "0.3.19"
sea-orm = { version = "1.1.3", features = ["sqlx-postgres", "runtime-tokio-rustls"]}
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
