[package]
name = "cityrade"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
noise = "0.9.0"
proc-macro2 = "1.0.92"
quote = "1.0.37"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.216", features = ["derive"] }
syn = { version = "2.0.91", features = ["full"] }
uuid = { version = "1.11.0", features = ["serde", "v4", "v7"] }
